# exact

./: .gitignore  CMakeLists.txt  coal_slurm.sh
mpi/: CMakeLists.txt  colony (imac.lan1's conflicted copy 2020-09-29).cxx  colony.cxx  colony.hxx
rnn/: CMakeLists.txt  Untitled.ipynb  annimate_progress.py  ant.cxx  ant.hxx  cants.cxx  cants_dbscan.bck  cants_dbscan.cxx  cants_dbscan.hxx  colony  colony.cxx  colony.hxx  compile.sh  examm.cxx  point.cxx  point.hxx  rnn.cxx  rnn_edge.cxx  rnn_edge.hxx  rnn_genome.cxx  rnn_genome.hxx  rnn_node_interface.hxx  species.cxx  test  test.cxx
rnn/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
